--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "react-router-dom": "^6.2.1"
   }
 }
